# cs200-assignment-1

./: AffineTest.txt  CMakeLists.txt  flake.nix
docs/: cs200_rubric_h1.txt
src/: Affine.cpp  AffineDemo.cpp  AffineTest.cpp
